[gd_scene load_steps=9 format=3 uid="uid://c5jfrjudv63dk"]

[ext_resource type="FontFile" uid="uid://bvbg07t7t33co" path="res://Assets/Fonts/Punktum.ttf" id="1_ahuw8"]
[ext_resource type="Texture2D" uid="uid://cr1m6gx5jqqqa" path="res://Assets/Landscapes/concrete_shades.png" id="1_vme58"]
[ext_resource type="PackedScene" uid="uid://cdnpjps8d0c6u" path="res://UI/BattleTeamControl.tscn" id="2_p2xhy"]
[ext_resource type="Script" path="res://UI/SelectUnits.gd" id="2_qqg62"]
[ext_resource type="FontFile" uid="uid://j71bxuhfo0u7" path="res://Assets/Fonts/data-latin.ttf" id="5_haiug"]
[ext_resource type="Script" path="res://UI/GameButton.gd" id="5_sprwv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_exw7v"]

[sub_resource type="Theme" id="Theme_dqv1h"]
default_font = ExtResource("1_ahuw8")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 16
Label/fonts/font = ExtResource("1_ahuw8")
Label/styles/normal = SubResource("StyleBoxEmpty_exw7v")

[node name="SelectUnits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dqv1h")
script = ExtResource("2_qqg62")

[node name="Concrete0" type="Sprite2D" parent="."]
modulate = Color(0.627451, 0.627451, 0.627451, 1)
texture_repeat = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_vme58")
centered = false
region_enabled = true
region_rect = Rect2(256, 244, 2304, 1296)

[node name="BattleTeamControl" parent="." instance=ExtResource("2_p2xhy")]
custom_minimum_size = Vector2(960, 240)
offset_left = 160.0
offset_top = 224.0
offset_right = 1200.0
offset_bottom = 464.0
scale = Vector2(0.8, 0.8)

[node name="SelectLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 96.0
offset_right = 768.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectButtonGrid" type="GridContainer" parent="."]
custom_minimum_size = Vector2(960, 2.08165e-12)
layout_mode = 0
offset_left = 160.0
offset_top = 432.0
offset_right = 1200.0
offset_bottom = 464.0
scale = Vector2(0.8, 0.8)
theme_override_constants/h_separation = 16
columns = 6
metadata/_edit_group_ = true

[node name="SelectButton" type="Button" parent="SelectButtonGrid"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_haiug")
text = "Select"
script = ExtResource("5_sprwv")

[node name="SelectButton2" type="Button" parent="SelectButtonGrid"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_haiug")
text = "Select"
script = ExtResource("5_sprwv")

[node name="SelectButton3" type="Button" parent="SelectButtonGrid"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_haiug")
text = "Select"
script = ExtResource("5_sprwv")

[node name="SelectButton4" type="Button" parent="SelectButtonGrid"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_haiug")
text = "Select"
script = ExtResource("5_sprwv")

[node name="SelectButton5" type="Button" parent="SelectButtonGrid"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_haiug")
text = "Select"
script = ExtResource("5_sprwv")

[node name="SelectButton6" type="Button" parent="SelectButtonGrid"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_haiug")
text = "Select"
script = ExtResource("5_sprwv")

[node name="RerollButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1064.0
offset_top = 600.0
offset_right = 1144.0
offset_bottom = 640.0
text = "Reroll"
script = ExtResource("5_sprwv")

[connection signal="pressed" from="RerollButton" to="." method="_on_reroll_button_pressed"]
